Ensure comments align correctly when the label has more rows than the content
Refs #1135, 3357cb5af05d1272741228624af8021cebf76cdc

--- a/assets/style.css
+++ b/assets/style.css
@@ -709,7 +709,7 @@ math {
       @media (width >= 30em) {
         [role='region'] & {
           display: grid;
-          grid-template-rows: auto auto;
+          grid-template-rows: auto 1fr;
           grid-template-columns: 45% 1fr auto;
           grid-auto-flow: dense;
           row-gap: 0;
